--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Life Giving - Mark Khan</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon"> </head>
+    <link rel="icon" href="favicon.ico" type="image/x-icon"> <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
 <body>
     <div class="container">
         <header>
@@ -30,6 +37,11 @@
             <a href="https://www.instagram.com/markmkhan" target="_blank" class="link-button">Instagram: @markmkhan</a>
             <a href="https://bsky.app/profile/markmkhan.bsky.social" target="_blank" class="link-button">Bluesky: @markmkhan.bsky.social</a>
         </section>
+
+        <section class="social-icons">
+            <a href="https://www.facebook.com/esistzeit" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/markmkhan" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://bsky.app/profile/markmkhan.bsky.social" target="_blank" aria-label="Bluesky"><i class="fas fa-feather-alt"></i></a> </section>
 
         <section class="contact">
             <h2>Contact:</h2>
