--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="lifegiving.online.jpg" alt="Life Giving Logo" class="logo">
+           <img src="my-new-logo.png" alt="Life Giving Logo" class="logo">
             <h1>Life Giving</h1>
             <p class="tagline">THE POWER TO TRANSFORM YOUR LIFE</p>
         </header>
