--- a/ebook/index.html
+++ b/ebook/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Life Giving Ebook</title>
+    <link rel="canonical" href="https://lifegiving.mykajabi.com/pl/2148693191">
+    <meta http-equiv="refresh" content="0; url=https://lifegiving.mykajabi.com/pl/2148693191">
+  </head>
+  <body>
+    <h1>Redirecting...</h1>
+    <p>If you are not redirected automatically, follow this <a href="https://lifegiving.mykajabi.com/pl/2148693191">link to the Ebook page</a>.</p>
+  </body>
+</html>
