--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Life Giving - Mark Khan</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon"> <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
@@ -16,7 +18,7 @@
 <body>
     <div class="container">
         <header>
-          <img src="my-new-logo.png" alt="Life Giving Logo" class="logo">
+            <img src="my-new-logo.png" alt="Life Giving Logo" class="logo">
             <h1>Life Giving</h1>
             <p class="tagline">THE POWER TO TRANSFORM YOUR LIFE</p>
         </header>
@@ -32,19 +34,21 @@
         </section>
 
         <section class="links">
-            <a href="https://bit.ly/LifeGivingPlatform" target="_blank" class="link-button">My Life Giving Platform</a>
-            <a href="https://www.facebook.com/esistzeit" target="_blank" class="link-button">Facebook: Es Ist Zeit</a>
-            <a href="https://www.instagram.com/markmkhan" target="_blank" class="link-button">Instagram: @markmkhan</a>
-            <a href="https://bsky.app/profile/markmkhan.bsky.social" target="_blank" class="link-button">Bluesky: @markmkhan.bsky.social</a>
+            <a href="https://markkhan.me/ebook" target="_blank" class="link-button">Download My Free Ebook</a>
+            <a href="https://bit.ly/LifeGivingPlatform" target="_blank" class="link-button">My Kajabi Platform</a>
         </section>
-
+        
         <section class="social-icons">
             <a href="https://www.facebook.com/esistzeit" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
             <a href="https://www.instagram.com/markmkhan" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://bsky.app/profile/markmkhan.bsky.social" target="_blank" aria-label="Bluesky"><i class="fas fa-feather-alt"></i></a> </section>
+            <a href="https://x.com/markmkhan" target="_blank" aria-label="X (Twitter)"><i class="fab fa-x-twitter"></i></a>
+            <a href="https://www.tiktok.com/@markmkhan" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+            <a href="https://www.threads.net/@markmkhan" target="_blank" aria-label="Threads"><i class="fab fa-threads"></i></a>
+            <a href="https://bsky.app/profile/markmkhan.bsky.social" target="_blank" aria-label="Bluesky"><i class="fas fa-feather-alt"></i></a>
+        </section>
 
         <section class="contact">
-            <h2>Contact:</h2>
+            <h2>Connect:</h2>
             <a href="https://bit.ly/MessengerCall" target="_blank" class="contact-button">Messenger Chat</a>
             <a href="https://wa.me/4915902854298" target="_blank" class="contact-button">WhatsApp Chat</a>
         </section>
