--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         </section>
         
         <section class="social-icons">
+            <a href="https://linkedin.com/in/markmkhan" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
             <a href="https://www.facebook.com/esistzeit" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
             <a href="https://www.instagram.com/markmkhan" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://x.com/markmkhan" target="_blank" aria-label="X (Twitter)"><i class="fab fa-x-twitter"></i></a>
             <a href="https://www.tiktok.com/@markmkhan" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
             <a href="https://www.threads.net/@markmkhan" target="_blank" aria-label="Threads"><i class="fab fa-threads"></i></a>
             <a href="https://bsky.app/profile/markmkhan.bsky.social" target="_blank" aria-label="Bluesky"><i class="fas fa-feather-alt"></i></a>
