--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         </section>
 
         <section class="links">
-            <a href="https://markkhan.me/ebook" target="_blank" class="link-button">Download My Free Ebook</a>
-            <a href="https://bit.ly/LifeGivingPlatform" target="_blank" class="link-button">My Kajabi Platform</a>
+            <a href="https://markkhan.me/ebook" target="_blank" class="link-button">Start Your Journey to a Whole Life</a>
+            <a href="https://bit.ly/LifeGivingPlatform" target="_blank" class="link-button">The Life Giving Platform</a>
         </section>
         
         <section class="social-icons">
