--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </section>
 
         <section class="links">
-            <a href="https://markkhan.me/ebook" target="_blank" class="link-button">Start Your Journey to a Whole Life</a>
+            <a href="https://markkhan.me/ebook" target="_blank" class="link-button">Get Your Guide to a Whole Life</a>
             <a href="https://bit.ly/LifeGivingPlatform" target="_blank" class="link-button">The Life Giving Platform</a>
         </section>
         
