--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <p>Explore the tools, courses, and resources below — or reach out to connect.</p>
         </section>
 
-        <section class="links">
-            <a href="https://markkhan.me/ebook" target="_blank" class="link-button">Get Your Guide to a Whole Life</a>
-            <a href="https://bit.ly/LifeGivingPlatform" target="_blank" class="link-button">The Life Giving Platform</a>
-        </section>
+       <section class="links">
+    <a href="https://markkhan.me/ebook" target="_blank" class="link-button">Get Your Guide to a Whole Life</a>
+    <a href="https://lifegiving.mykajabi.com/pl/2148693191" target="_blank" class="link-button">The Life Giving Platform</a>
+</section>
         
         <section class="social-icons">
             <a href="https://linkedin.com/in/markmkhan" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
