--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <section class="links">
     <a href="https://markkhan.me/ebook" target="_blank" class="link-button">Get Your Guide to a Whole Life</a>
-    <a href="https://lifegiving.mykajabi.com/pl/2148698503" target="_blank" class="link-button">The Life Giving Platform</a>
+    <a href="https://lifegiving.mykajabi.com/pl/2148698503" target="_blank" class="link-button">Join the Waitlist Now</a>
 </section>
         
         <section class="social-icons">
