Update title and content in index.html
reset Life Giving 2026

--- a/index.html
+++ b/index.html
@@ -3,58 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Life Giving - Mark Khan</title>
+    <title>Mark Khan — Inner Life Facilitator</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Merriweather:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
     <div class="container">
         <header>
             <img src="my-new-logo.png" alt="Life Giving Logo" class="logo">
             <h1>Life Giving</h1>
-            <p class="tagline">THE POWER TO TRANSFORM YOUR LIFE</p>
+            <p class="tagline">Returning from outside-in living to inside-out being</p>
         </header>
 
         <section class="profile">
-            <img src="your-profile-pic.jpg" alt="Mark Khan" class="profile-pic">
-            <h2>Welcome — I’m a Spiritual Transition Coach and founder of Life Giving.</h2>
-            <p>I guide those in seasons of change through the I I D Process:</p>
-            <p class="process-steps">
-                👉 Intimacy → Identity → Destiny — a practical journey into clarity, purpose, and destiny.
+            <img src="mark-profile.jpg" alt="Mark Khan" class="profile-pic">
+            <h2>Mark Khan</h2>
+            <p class="facilitator-title">Inner Life Facilitator</p>
+            <p class="bio-text">
+                I facilitate spaces for <em>resonance, reflection, and orientation</em>. <br>
+                Through the <strong>I.I.D. Framework</strong>, we explore the gentle path of Intimacy, Identity, and Destiny.
             </p>
-            <p>Explore the tools, courses, and resources below — or reach out to connect.</p>
         </section>
 
-      <section class="links">
-    <a href="https://markkhan.me/ebook" target="_blank" class="link-button">Get Your Guide to a Whole Life</a>
-    <a href="https://lifegiving.mykajabi.com/pl/2148698503" target="_blank" class="link-button">Join the Waitlist Now</a>
-</section>
+        <section class="links">
+            <h3 class="section-label">Inward Connection</h3>
+            <a href="https://markkhan.me/ebook" target="_blank" class="link-button">Start Your Journey to a Whole Life (Reflective Guide)</a>
+            <a href="https://bit.ly/LifeGivingPlatform" target="_blank" class="link-button highlight">Life Giving — Inward Connection Space (Kajabi)</a>
+            <a href="https://www.facebook.com/groups/lifegivingcommunity" target="_blank" class="link-button secondary">Life Giving — Private Facebook Group</a>
+        </section>
+
+        <section class="links">
+            <h3 class="section-label">Practical Stewardship</h3>
+            <p class="small-text">Tools I steward for everyday life</p>
+            <a href="https://www.facebook.com/groups/connectedleaders" target="_blank" class="link-button tool-link">Connected Leaders (Webstart Tools)</a>
+            <a href="https://www.facebook.com/groups/everydayoils" target="_blank" class="link-button tool-link">Everyday Oils (Health & Wellness)</a>
+        </section>
         
         <section class="social-icons">
-            <a href="https://linkedin.com/in/markmkhan" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-            <a href="https://www.facebook.com/esistzeit" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/markmkhan" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.tiktok.com/@markmkhan" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
-            <a href="https://www.threads.net/@markmkhan" target="_blank" aria-label="Threads"><i class="fab fa-threads"></i></a>
-            <a href="https://bsky.app/profile/markmkhan.bsky.social" target="_blank" aria-label="Bluesky"><i class="fas fa-feather-alt"></i></a>
+            <a href="https://linkedin.com/in/markmkhan" target="_blank" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.facebook.com/esistzeit" target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/markmkhan" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.threads.net/@markmkhan" target="_blank" title="Threads"><i class="fab fa-threads"></i></a>
+            <a href="https://bsky.app/profile/markmkhan.bsky.social" target="_blank" title="Bluesky"><i class="fas fa-feather-alt"></i></a>
         </section>
 
         <section class="contact">
-            <h2>Connect:</h2>
-            <a href="https://bit.ly/MessengerCall" target="_blank" class="contact-button">Messenger Chat</a>
-            <a href="https://wa.me/4915902854298" target="_blank" class="contact-button">WhatsApp Chat</a>
+            <div class="contact-grid">
+                <a href="https://m.me/esistzeit" target="_blank" class="contact-icon-link"><i class="fab fa-facebook-messenger"></i> Messenger</a>
+                <a href="mailto:mark@lifegiving.online" class="contact-icon-link"><i class="fas fa-envelope"></i> Email</a>
+            </div>
         </section>
 
         <footer>
-            <p>&copy; 2024 Mark Khan. All rights reserved.</p>
+            <p>&copy; 2026 Mark Khan. All rights reserved.</p>
         </footer>
     </div>
 </body>
