Enhance header and add link hub section
Updated tagline and added link hub section with Facebook group links.

--- a/index.html
+++ b/index.html
@@ -22,42 +22,34 @@
     <header>
         <img src="my-new-logo.png" alt="Life Giving Logo" class="logo">
         <h1>Mark Khan</h1>
-        <p class="tagline">Inner Life Facilitator</p>
+        <p class="tagline">Inner Life Facilitator — Curating spaces for reflection & connection</p>
     </header>
 
-    <!-- Profile Section -->
-    <section class="profile">
-        <img src="mark-profile.jpg" alt="Mark Khan" class="profile-pic">
-        <h2>Creating space for inward connection</h2>
-        <p class="bio-text">
-            Life Giving exists as a relational space for those who feel much of life has been lived from the outside in — 
-            and who are drawn to reconnect from the inside out.  
-            Here, reflection, resonance, and orientation gently guide your journey.
-        </p>
-    </section>
+    <!-- Link Hub Section -->
+    <section class="link-hub">
+        <h3 class="section-label">Explore & Connect</h3>
 
-    <!-- Inward Connection / Groups Intro -->
-    <section class="groups-intro">
-        <h3 class="section-label">Life Giving Spaces</h3>
-        <p>
-            Our Facebook groups are carefully cultivated communities where members explore inward connection, share reflections, 
-            and participate in collective growth. Each group has its own focus, inviting you to choose the space that resonates most with your journey.
-        </p>
-        <ul class="group-list">
-            <li><strong>Reflections & Journaling:</strong> Daily prompts and contemplative exercises to explore inner life.</li>
-            <li><strong>Inner Life Conversations:</strong> Thoughtful discussions for curiosity and personal insight.</li>
-            <li><strong>Everyday Stewardship:</strong> Practical approaches for mindful living and alignment with values.</li>
-        </ul>
-        <p class="cta-text">To join a group, click below and explore the space that calls to you:</p>
-        <a href="https://www.facebook.com/groups/lifegivingspace" target="_blank" class="link-button highlight">Explore Life Giving Groups</a>
-    </section>
+        <!-- Facebook Groups -->
+        <div class="hub-section">
+            <a href="https://www.facebook.com/groups/reflectionjournaling" target="_blank" class="link-button">
+                Reflections & Journaling
+            </a>
+            <p class="link-desc">Daily prompts and gentle exercises to explore inner life.</p>
 
-    <!-- Tools / Stewardship -->
-    <section class="tools">
-        <h3 class="section-label">Everyday Stewardship</h3>
-        <p class="small-text">Practical tools and approaches I personally steward — reach out to learn more.</p>
-        <div class="steward-box">
-            <strong>Connected Leaders</strong>
-            <p>Guidance for building thoughtful, intentional online presence.</p>
+            <a href="https://www.facebook.com/groups/innerlifeconversations" target="_blank" class="link-button">
+                Inner Life Conversations
+            </a>
+            <p class="link-desc">Thoughtful discussions to deepen curiosity and insight.</p>
+
+            <a href="https://www.facebook.com/groups/everydaystewardship" target="_blank" class="link-button">
+                Everyday Stewardship
+            </a>
+            <p class="link-desc">Practical tools for mindful living and alignment with values.</p>
         </div>
-        <div class="steward-box">
+
+        <!-- Tools / Resources -->
+        <div class="hub-section">
+            <a href="https://markkhan.me/tools" target="_blank" class="link-button">
+                Practical Tools I Steward
+            </a>
+            <p class="link-desc">S
