Refactor index.html for improved structure and styling

--- a/index.html
+++ b/index.html
@@ -1,55 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mark Khan — Inner Life Facilitator</title>
-<link rel="icon" href="favicon.ico" type="image/x-icon">
-
-<!-- Fonts -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Merriweather:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-
-<!-- Font Awesome -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mark Khan — Inner Life Facilitator</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Merriweather:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
-<div class="container">
+    <div class="hub-container">
+        <header>
+            <img src="my-new-logo.png" alt="Life Giving Logo" class="main-logo">
+            <img src="mark-profile.jpg" alt="Mark Khan" class="profile-pic">
+            <h1>Mark Khan</h1>
+            <p class="facilitator-title">Inner Life Facilitator</p>
+            <p class="tagline">Curating spaces for reflection & connection</p>
+        </header>
 
-    <!-- Header -->
-    <header>
-        <img src="my-new-logo.png" alt="Life Giving Logo" class="logo">
-        <h1>Mark Khan</h1>
-        <p class="tagline">Inner Life Facilitator — Curating spaces for reflection & connection</p>
-    </header>
+        <main>
+            <section class="link-group">
+                <a href="https://markkhan.me/ebook" target="_blank" class="btn primary-btn">
+                    Start Your Journey to a Whole Life <small>(Reflective Guide)</small>
+                </a>
+                <a href="https://m.me/esistzeit" target="_blank" class="btn secondary-btn">
+                    Join the Life Giving Private Group <small>(Message for Access)</small>
+                </a>
+            </section>
 
-    <!-- Link Hub Section -->
-    <section class="link-hub">
-        <h3 class="section-label">Explore & Connect</h3>
+            <section class="stewardship-group">
+                <h3 class="label">Everyday Stewardship</h3>
+                <p class="sub-label">Tools I personally use and share</p>
+                
+                <a href="https://m.me/esistzeit" target="_blank" class="steward-item">
+                    <span>Connected Leaders</span>
+                    <small>Build Your Online Presence</small>
+                </a>
+                
+                <a href="https://m.me/esistzeit" target="_blank" class="steward-item">
+                    <span>Everyday Oils</span>
+                    <small>Moving Toward Health & Wellbeing</small>
+                </a>
+            </section>
+        </main>
 
-        <!-- Facebook Groups -->
-        <div class="hub-section">
-            <a href="https://www.facebook.com/groups/reflectionjournaling" target="_blank" class="link-button">
-                Reflections & Journaling
-            </a>
-            <p class="link-desc">Daily prompts and gentle exercises to explore inner life.</p>
-
-            <a href="https://www.facebook.com/groups/innerlifeconversations" target="_blank" class="link-button">
-                Inner Life Conversations
-            </a>
-            <p class="link-desc">Thoughtful discussions to deepen curiosity and insight.</p>
-
-            <a href="https://www.facebook.com/groups/everydaystewardship" target="_blank" class="link-button">
-                Everyday Stewardship
-            </a>
-            <p class="link-desc">Practical tools for mindful living and alignment with values.</p>
-        </div>
-
-        <!-- Tools / Resources -->
-        <div class="hub-section">
-            <a href="https://markkhan.me/tools" target="_blank" class="link-button">
-                Practical Tools I Steward
-            </a>
-            <p class="link-desc">S
+        <footer>
+            <div class="social-fluent">
+                <a href="https://linkedin.com/in/markmkhan" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.facebook.com/esistzeit" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/markmkhan" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.threads.net/@markmkhan" target="_blank"><i class="fab fa-threads"></i></a>
+                <a href="https://wa.me/4915902854298" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            </div>
+            <p class="copyright">&copy; 2026 Mark Khan</p>
+        </footer>
+    </div>
+</body>
+</html>
