Wrap profile picture in a frame div

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <div class="hub-container">
         <header>
             <img src="my-new-logo.png" alt="Life Giving Logo" class="main-logo">
-            <img src="mark-profile.jpg" alt="Mark Khan" class="profile-pic">
+            <div class="profile-frame">
+                <img src="mark-profile.jpg" alt="Mark Khan" class="profile-pic">
+            </div>
             <h1>Mark Khan</h1>
             <p class="facilitator-title">Inner Life Facilitator</p>
             <p class="tagline">Curating spaces for reflection & connection</p>
