Update HTML structure and styling classes

--- a/index.html
+++ b/index.html
@@ -8,20 +8,24 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Merriweather:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Merriweather:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
     <div class="hub-container">
-        <header>
+        <header class="brand-header">
             <img src="my-new-logo.png" alt="Life Giving Logo" class="main-logo">
+            <h2 class="logo-text">Life Giving</h2>
+        </header>
+
+        <section class="profile-section">
             <div class="profile-frame">
                 <img src="mark-profile.jpg" alt="Mark Khan" class="profile-pic">
             </div>
-            <h1>Mark Khan</h1>
+            <h1 class="display-name">Mark Khan</h1>
             <p class="facilitator-title">Inner Life Facilitator</p>
             <p class="tagline">Curating spaces for reflection & connection</p>
-        </header>
+        </section>
 
         <main>
             <section class="link-group">
