--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
 
         <main>
             <section class="link-group">
-                <a href="https://markkhan.me/ebook" target="_blank" class="btn primary-btn">
-                    Start Your Journey to a Whole Life <small>(Reflective Guide)</small>
+                <a href="https://m.me/esistzeit" target="_blank" class="btn primary-btn">
+                    Inward Connection Space <small>Reflections & guided journaling (DM to join)</small>
                 </a>
-                <a href="https://m.me/esistzeit" target="_blank" class="btn secondary-btn">
-                    Join the Life Giving Private Group <small>(Message for Access)</small>
+                
+                <a href="https://www.facebook.com/groups/lifegivingspace" target="_blank" class="btn secondary-btn">
+                    Life Giving Private Group <small>A space for resonance & community</small>
                 </a>
             </section>
 
