Refactor HTML structure for stewardship items

--- a/index.html
+++ b/index.html
@@ -45,13 +45,19 @@
                 <p class="sub-label">Tools I personally use and share</p>
                 
                 <a href="https://m.me/esistzeit" target="_blank" class="steward-item">
-                    <span>Connected Leaders <i class="fas fa-chevron-right"></i></span>
-                    <small>Build Your Online Presence</small>
+                    <div class="steward-content">
+                        <span>Connected Leaders</span>
+                        <small>Build Your Online Presence</small>
+                    </div>
+                    <i class="fas fa-plus"></i>
                 </a>
                 
                 <a href="https://m.me/esistzeit" target="_blank" class="steward-item">
-                    <span>Everyday Oils <i class="fas fa-chevron-right"></i></span>
-                    <small>Moving Toward Health & Wellbeing</small>
+                    <div class="steward-content">
+                        <span>Everyday Oils</span>
+                        <small>Moving Toward Health & Wellbeing</small>
+                    </div>
+                    <i class="fas fa-plus"></i>
                 </a>
             </section>
         </main>
