Refactor HTML structure for contact sections

--- a/index.html
+++ b/index.html
@@ -28,24 +28,38 @@
         </section>
 
         <main>
-            <a href="https://m.me/esistzeit" target="_blank" class="btn primary-btn">
-                Inward Connection Space 
-                <small>Reflections & guided journaling (DM to join)</small>
-            </a>
-            
-            <a href="https://www.facebook.com/groups/lifegivingspace" target="_blank" class="btn secondary-btn">
-                Life Giving Private Group 
-                <small>A space for resonance & community</small>
-            </a>
+            <div class="section-group">
+                <a href="https://m.me/esistzeit" target="_blank" class="btn primary-btn">
+                    Inward Connection Space 
+                    <small>Reflections & guided journaling (DM to join)</small>
+                </a>
+                
+                <a href="https://www.facebook.com/groups/lifegivingspace" target="_blank" class="btn secondary-btn">
+                    Life Giving Private Group 
+                    <small>A space for resonance & community</small>
+                </a>
+            </div>
 
-            <div class="stewardship-zone">
+            <div class="section-group">
                 <h3 class="section-label">Everyday Stewardship</h3>
-                <a href="https://m.me/esistzeit" target="_blank" class="steward-link">
-                    <span>Connected Leaders — <small>Online Presence</small></span>
+                <a href="https://m.me/esistzeit" target="_blank" class="btn secondary-btn">
+                    Connected Leaders <small>Build Your Online Presence</small>
                 </a>
-                <a href="https://m.me/esistzeit" target="_blank" class="steward-link">
-                    <span>Everyday Oils — <small>Wellbeing</small></span>
+                <a href="https://m.me/esistzeit" target="_blank" class="btn secondary-btn">
+                    Everyday Oils <small>Moving Toward Wellbeing</small>
                 </a>
+            </div>
+
+            <div class="section-group">
+                <h3 class="section-label">Message Me</h3>
+                <div class="contact-grid">
+                    <a href="https://m.me/esistzeit" target="_blank" class="btn contact-btn">
+                        <i class="fab fa-facebook-messenger"></i> Messenger
+                    </a>
+                    <a href="https://wa.me/4915902854298" target="_blank" class="btn contact-btn">
+                        <i class="fab fa-whatsapp"></i> WhatsApp
+                    </a>
+                </div>
             </div>
         </main>
 
@@ -54,7 +68,6 @@
                 <a href="https://linkedin.com/in/markmkhan" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://www.facebook.com/esistzeit" target="_blank"><i class="fab fa-facebook-f"></i></a>
                 <a href="https://www.instagram.com/markmkhan" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://wa.me/4915902854298" target="_blank"><i class="fab fa-whatsapp"></i></a>
             </div>
             <p class="copyright">&copy; 2026 Mark Khan</p>
         </footer>
