--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                     <small>Reflections & guided journaling (DM to join)</small>
                 </a>
                 
-                <a href="https://www.facebook.com/groups/lifegivingspace" target="_blank" class="btn secondary-btn">
+                <a href="https://m.me/esistzeit" target="_blank" class="btn secondary-btn">
                     Life Giving Private Group 
-                    <small>A space for resonance & community</small>
+                    <small>A space for resonance (Message for access)</small>
                 </a>
             </div>
 
@@ -51,8 +51,8 @@
             </div>
 
             <div class="section-group">
-                <h3 class="section-label">Message Me</h3>
-                <div class="contact-grid">
+                <h3 class="section-label">Direct Contact</h3>
+                <div class="contact-stack">
                     <a href="https://m.me/esistzeit" target="_blank" class="btn contact-btn">
                         <i class="fab fa-facebook-messenger"></i> Messenger
                     </a>
