--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 
                 <a href="https://m.me/esistzeit" target="_blank" class="btn secondary-btn">
                     Life Giving Private Group 
-                    <small>A space for resonance (Message for access)</small>
+                    <small>A space for resonance (DM for access)</small>
                 </a>
             </div>
 
@@ -68,6 +68,7 @@
                 <a href="https://linkedin.com/in/markmkhan" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://www.facebook.com/esistzeit" target="_blank"><i class="fab fa-facebook-f"></i></a>
                 <a href="https://www.instagram.com/markmkhan" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.threads.net/@markmkhan" target="_blank"><i class="fab fa-threads"></i></a>
             </div>
             <p class="copyright">&copy; 2026 Mark Khan</p>
         </footer>
